fix navigation screen on mobile text readabilty

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3752,10 +3752,11 @@ span{
 			transition: color 0.2s;
 			border-bottom: 0;
 			border-top: solid 1px rgba(255, 255, 255, 0.25);
-			color: rgba(255, 255, 255, 0.5);
+			color: rgba(255, 255, 255, 1);
 			display: block;
 			padding: 0.75em 0;
 			text-decoration: none;
+			font-weight: 400;
 		}
 
 			#navPanel .link:first-child {
